# setuptools_openapi_generator

./: .gitignore  Dockerfile  README.rst  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.rst
.github/workflows/: code.yml
docs/: conf.py  index.rst
docs/developer/how-to/: make-release.rst  pin-requirements.rst  update-tools.rst
docs/developer/tutorials/: dev-install.rst
docs/user/how-to/: run-container.rst
docs/user/reference/: api.rst
docs/user/tutorials/: installation.rst
src/setuptools_openapi_generator/: __main__.py  config.py  integration.py  utils.py
tests/: test_boilerplate_removed.py  test_cli.py  test_config.py  test_integration.py  test_utils.py
tests/sample_project/: pyproject.toml
