[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "setuptools_openapi_generator @ file:../..",
]
build-backend = "setuptools.build_meta"

[project]
name = "sample_project"
dynamic = ["version"]

[tool.setuptools_openapi_generator]
library = "httpx"
basedir = "src/sample_project/apis/"
sources = ["api_definitions/link-example.json", "api_definitions/petstore.json"]
